<resources>
    <string name="app_name">Airline App</string>
    <string name="home_action">Home</string>
    <string name="tickets_action">My tickets</string>
    <string name="profile_action">My profile</string>
    <string name="logout_action">Log out</string>
    <string name="home_header_text">Welcome to airline application!</string>
    <string name="home_subtitle_text">Here are some links to get you started:</string>
    <string name="routes_action">Routes</string>
    <string name="flights_action">Flights</string>
    <string name="to_input_hint">To…</string>
    <string name="search_description">Search action</string>
    <string name="fromInput_hint">From…</string>
    <string name="from_input_hint">From…</string>

    <string name="routes_sort_by_prompt">Choose category</string>
    <string name="flights_sort_by_prompt">Choose category</string>

    <string name="sort_order_prompt">Choose order</string>
    <string name="expand_collapse_button_description">Expand or collapse button</string>
    <string name="sign_in_text">Sign in</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_up_header_text">Sign up</string>
    <string name="sign_up_subtitle_text">This is your basic authorization info</string>
    <string name="next_button_text">Next</string>
    <string name="passenger_info_header_text">Add passenger info</string>
    <string name="passenger_info_subtitle_text">This additional information will be used for tickets buying</string>
    <string name="first_name_text">First name</string>
    <string name="last_name_text">Last name</string>
    <string name="address_text">Address</string>
    <string name="phone_number_text">Phone number</string>
    <string name="complete_button_text">Complete</string>
    <string name="flight_number_text">Flight number: %1$d</string>
    <string name="flight_status_text">Cancelled: %1$s</string>
    <string name="ticket_seat_number_text">Your seat: %1$s</string>
    <string name="routes_activity">Route</string>
    <string name="available_tickets">Available tickets:</string>
    <string name="flight_activity">Ticket details</string>
    <string name="route_id_text">Route number is: %1$d</string>
    <string name="departure_text">Departs at: %1$s</string>
    <string name="arrival_text">Arrives at: %1$s</string>
    <string name="flight_description_text">Total information about tickets</string>
    <string name="buy_ticket_text">Buy</string>
    <string name="seats_input_text">Enter preferable seat</string>

    <!-- For routes spinner -->
    <string-array name="routes_sort_by">
        <item>None</item>
        <item>Price</item>
        <item>Duration</item>
    </string-array>

    <!-- For flights spinner -->
    <string-array name="flights_sort_by">
        <item>None</item>
        <item>To</item>
        <item>From</item>
    </string-array>

    <!-- Sorting order for spinners -->
    <string-array name="sort_order">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>
</resources>
