<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_action"
            android:icon="@drawable/ic_home"
            android:title="@string/home_action"/>
        <item
            android:id="@+id/routes_action"
            android:icon="@drawable/ic_route"
            android:title="@string/routes_action"/>
        <item
            android:id="@+id/tickets_action"
            android:icon="@drawable/ic_ticket"
            android:title="@string/tickets_action"/>
        <item
            android:id="@+id/profile_action"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_action"/>
        <item
            android:id="@+id/logout_action"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_action"/>
    </group>
</menu>