<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="46dp"
        tools:layout_conversion_absoluteWidth="280dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/to_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/to_input_hint"
            tools:layout_conversion_absoluteHeight="46dp"
            tools:layout_conversion_absoluteWidth="280dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton
        android:id="@+id/search"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/search_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/to_input_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/additional_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/to_input_layout"
        android:focusableInTouchMode="true">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/from_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="46dp"
            tools:layout_conversion_absoluteWidth="368dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/from_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/from_input_hint"
                tools:layout_conversion_absoluteHeight="46dp"
                tools:layout_conversion_absoluteWidth="368dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="62dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/sort_by_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/flights_sort_by"
            android:prompt="@string/flights_sort_by_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/order_spinner"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_input_layout"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="176dp" />
        <Spinner
            android:id="@+id/order_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/sort_order"
            android:prompt="@string/sort_order_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sort_by_spinner"
            app:layout_constraintTop_toBottomOf="@+id/from_input_layout"
            tools:layout_conversion_absoluteHeight="24dp"
            tools:layout_conversion_absoluteWidth="176dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageButton
        android:id="@+id/expand_collapse"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/background_light"
        android:contentDescription="@string/expand_collapse_button_description"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_fields" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flights_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_collapse"
        tools:listitem="@layout/flight_item" />
</androidx.constraintlayout.widget.ConstraintLayout>